--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,11 +2,10 @@
 
 // For example:
 $red: #FD1015;
+$blue: #167FFB;
+$yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
+$gray: #0E0000;
+$light-gray: #F4F4F4;
 
-
-$gray: #F4F6FF;
-$dark-blue: #10375C;
-$blue: #127681;
-$yellow: #F3C623;
