--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -15,38 +15,32 @@ $headers-font: "Roboto", "sans-serif";
 // $my-font: "Font Name";
 
 // size
-h1, h2, h3, h4, h5 {
+.title {
   font-family: $headers-font;
   color: $dark-blue;
 }
 
-h1 {
+h1.title {
   font-size: 48px;
   line-height: 52px;
 }
 
-h2 {
+h2.title {
   font-size: 32px;
   line-height: 42px;
 }
 
-h3 {
+h3.title {
   font-size: 24px;
   line-height: 28px;
 }
 
-h4 {
+h4.title {
   font-size:18px;
   line-height: 28px;
 }
 
-h5 {
+h5.title {
   font-size: 12px;
   line-height: 16px;
-}
-
-body, p {
-  font-family: $body-font;
-  font-size: 16px;
-  color: $blue;
 }
