--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,68 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+// -- Reset settings --
+body {
+  margin: 0;
+  background-color: $main-background;
+  font-family: $body-font;
+  color: $high-text-color;
+}
+
+// -- Typographie spec --
+h1.title {
+  font-size: $h1;
+  font-weight: $bold;
+  line-height: 52px;
+}
+
+h2.title {
+  font-size: $h2;
+  font-weight: $bold;
+  line-height: 42px;
+}
+
+h3.title {
+  font-size: $h3;
+  font-weight: $bold;
+  line-height: 28px;
+}
+
+h4.title {
+  font-size: $h4;
+  font-weight: $semi-bold;
+  line-height: 24px;
+}
+
+h5.title {
+  font-size: $h5;
+  font-weight: $semi-bold;
+  line-height: 16px;
+  text-transform: uppercase;
+}
+
+p.body {
+  font-size: $p;
+  font-weight: $regular;
+  line-height: 24px;
+}
+
+p.body-strong {
+  font-size: $p;
+  font-weight: $semi-bold;
+  line-height: 24px;
+}
+
+p.body-small {
+  font-size: $p-small;
+  font-weight: $regular;
+  line-height: 20px;
+}
+
+p.body-small-strong {
+  font-size: $p-small;
+  font-weight: $semi-bold;
+  line-height: 20px;
+}
