--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,46 +1,20 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap');
-// Define fonts for body and headers
-$body-font: "Open-sans", "sans-serif";
-$headers-font: "Roboto", "sans-serif";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-// To use a font file (.woff) uncomment following lines
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
+// -- Typographie --
+$body-font: 'Poppins', sans-serif;
+$headers-font: 'Poppins', sans-serif;
 
-// size
-.title {
-  font-family: $headers-font;
-  color: $dark-blue;
-}
+// -- Fonts weight --
+$regular: 400;
+$semi-bold: 600;
+$bold: 700;
 
-h1.title {
-  font-size: 48px;
-  line-height: 52px;
-}
-
-h2.title {
-  font-size: 32px;
-  line-height: 42px;
-}
-
-h3.title {
-  font-size: 24px;
-  line-height: 28px;
-}
-
-h4.title {
-  font-size:18px;
-  line-height: 28px;
-}
-
-h5.title {
-  font-size: 12px;
-  line-height: 16px;
-}
+// -- Fonts size --
+$h1: 48px;
+$h2: 32px;
+$h3: 24px;
+$h4: 18px;
+$h5: 12px;
+$p: 16px;
+$p-small: 14px;
