--- a/app/views/philosophers/show.html.erb
+++ b/app/views/philosophers/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+
   <div class="content">
     <h1 class="title"><%= @philosopher.last_name %></h1>
     <h2 class="title"><%= @philosopher.nationality %> - <%= @philosopher.specialty %></h2>
@@ -9,9 +10,11 @@
         <% end %>
     </ul>
     <span> @philosopher.price_per_night</span>
-
   </div>
+
   <div class="photo">
-    <%= cl_image_tag @philosopher.photo.key, height: 1200px, width: 758px, crop: fill %>
+    <% if @philosopher.photo.attached? %>
+      <%= cl_image_tag @philosopher.photo.key, height: 1200px, width: 758px, crop: fill %>
+    <% end %>
   </div>
 </div>
