--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 // -- Reset settings --
 body {
   margin: 0;
-  background-color: $main-background;
+  // background-color: $main-background;
   font-family: $body-font;
   color: $high-text-color;
 }
