--- a/app/views/philosophers/new.html.erb
+++ b/app/views/philosophers/new.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :specialty %>
     <%= f.input :nationality %>
     <%= f.input :birthday %>
-    <%= f.input :prestations %>
+    <%= f.input :prestations, collection: Philosopher::PRESTATIONS, input_html: { multiple: true}, include_hidden: false, as: :check_boxes %>
     <%= f.input :available_location %>
     <%= f.input :price_per_night %>
     <%= f.input :description %>
