--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: url(https://images.unsplash.com/photo-1542202793-40a53b954ecd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+  <div class="container">
+    <h1 class="title">Lorem Ipsum</h1>
+    <p class="body-strong">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, dolores voluptatem? Veritatis neque quas.</p>
+    <%= link_to 'Rechercher', philosophers_path, class: "primary-btn" %>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <div class="con-cards">
+        <div class="card">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
