add footer with render

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,10 +10,18 @@
   <div class="row">
     <div class="col-12">
       <div class="con-cards">
-        <div class="card">
+        
+        <div class="card-philo">
+          <div class="con-photo">
+            
+          </div>
+          <div class="con-text">
+            <h4 class="title">Philosopher name</h4>
+            <p class="body-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+          </div>
         </div>
+        
       </div>
     </div>
   </div>
 </div>
-
