--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,17 @@
-.card {
-  
+.card-philo {
+  width: 100%;
+  height: 360px;
+  box-shadow: $box-shadow-color;
+  border-radius: 16px;
+  .con-photo {
+    width: 100%;
+  }
+
+  .con-text {
+    padding: 16px;
+
+    p {
+      color: $medium-text-color;
+    }
+  }
 }
