--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,7 +5,7 @@ $secondary-background-color: hsl(0, 0%, 97%);
 // -- Text color --
 $high-text-color: hsl(0, 0%, 13%);
 $medium-text-color: hsl(0, 0%, 44%);
-$high-text-hover: hsl(0, 0%, 13%);
+$high-text-hover: hsl(0, 0%, 28%);
 
 // -- Primary color --
 $primary-color: hsl(349, 100%, 61%);
@@ -15,7 +15,7 @@ $primary-hover: hsl(349, 75%, 54%);
 $border-color: hsl(0, 0%, 87%);
 
 // -- Box shadow --
-$box-shadow-color: 0px, 2px, 8px rgba(0,0,0,0.15);
+$box-shadow-color: 0px 2px 8px rgba(0,0,0,0.15);
 
 
 
