--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,9 @@
 // Specific CSS for your home-page
+.con-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 16px;
+  grid-auto-rows: minmax(100px, auto);
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
