--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,7 @@
                 required: true %>
     <%= f.input :phone_number,
                 required: true %>
+                <%= f.input :photo, as: :file, required: true %>
   </div>
 
   <div class="form-actions">
