--- a/app/views/philosophers/new.html.erb
+++ b/app/views/philosophers/new.html.erb
@@ -10,5 +10,6 @@
     <%= f.input :available_location %>
     <%= f.input :price_per_night %>
     <%= f.input :description %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit %>
 <% end %>
