--- a/app/views/philosophers/show.html.erb
+++ b/app/views/philosophers/show.html.erb
@@ -4,17 +4,26 @@
     <h1 class="title"><%= @philosopher.last_name %></h1>
     <h2 class="title"><%= @philosopher.nationality %> - <%= @philosopher.specialty %></h2>
     <p><%= @philosopher.description %></p>
+    <span>Prestations: </span>
     <ul>
       <% @philosopher.prestations.each do |prestation| %>
         <li> <%= prestation  %> </li>
         <% end %>
     </ul>
-    <span> @philosopher.price_per_night</span>
+    <span> <%= @philosopher.price_per_night %>€ per night</span>
+
+    <a href="#"> Book <%= @philosopher.last_name %> now !</a>
+
+   
+
   </div>
 
+  <div class="photo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Parmenides.jpg/880px-Parmenides.jpg" alt="">
+  </div>
   <%# <div class="photo">
     <% if @philosopher.photo.attached? %>
       <%# <%= cl_image_tag @philosopher.photo.key, height: 1200px, width: 758px, crop: fill %>
     <%# <% end %> 
-  <%# </div> 
+  <%# </div>  %> 
 </div>
