--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,17 +10,33 @@
   <div class="row">
     <div class="col-12">
       <div class="con-cards">
-        
         <div class="card-philo">
           <div class="con-photo">
-            
+            <%= image_tag 'https://source.unsplash.com/random/400x600', alt: "category", class: 'img-card-philo' %>
           </div>
           <div class="con-text">
-            <h4 class="title">Philosopher name</h4>
+            <h4 class="title">Category</h4>
             <p class="body-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
-        
+        <div class="card-philo">
+          <div class="con-photo">
+            <%= image_tag 'https://source.unsplash.com/random/400x600', alt: "category", class: 'img-card-philo' %>
+          </div>
+          <div class="con-text">
+            <h4 class="title">Category</h4>
+            <p class="body-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+        <div class="card-philo">
+          <div class="con-photo">
+            <%= image_tag 'https://source.unsplash.com/random/400x600', alt: "category", class: 'img-card-philo' %>
+          </div>
+          <div class="con-text">
+            <h4 class="title">Category</h4>
+            <p class="body-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
