--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,17 +1,32 @@
 .card-philo {
-  width: 100%;
+  position: relative;
+  width: 300px;
   height: 360px;
   box-shadow: $box-shadow-color;
   border-radius: 16px;
+  margin: 0 auto;
+  
   .con-photo {
     width: 100%;
+    height: 256px;
+  }
+
+  .img-card-philo {
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100% ;
+  border-radius: 16px 16px 0 0;
+  width: 100%;
   }
 
   .con-text {
+    position: absolute;
+    bottom: 0px;
     padding: 16px;
 
     p {
       color: $medium-text-color;
+      margin: 0;
     }
   }
 }
