--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -14,15 +14,16 @@
 .footer-links {
   display: flex;
   align-items: center;
-}
-.footer-links a {
+
+  a {
   color: $high-text-color;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
-  
-  &:hover {
-    color: $high-text-hover;
+
+    &:hover {
+      color: $high-text-hover;
+    }
   }
 }
 
