--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,14 +1,15 @@
-.container {
+.show {
   display: flex;
   justify-content: space-between;
   background-color: $main-background-color;
-  margin-right: 50px;
+  margin-right: 50px auto;
 }
 
 .content {
-  align-self: center;
-  position: sticky;
-  top: 250px;
+  display: flex;
+  align-self: center;  
+  flex-direction: column;
+  margin-top: 100px;
 }
 
 img {
@@ -17,10 +18,20 @@ img {
   top: 0;
 }
 
+ul {
+  display: inline;
+}
+
 li {
   display: inline;
   list-style: none;
-  $medium-text-color:
+  color: $medium-text-color;
+}
+
+.prestation {
+  border: 1px $border-color solid;
+  padding: 8px 16px;
+  border-radius: 25px;
 }
 
 h1 {
@@ -38,4 +49,29 @@ p {
 .form {
   width: 200px;
   display: inline;  
+}
+
+.price {
+  font-size: $h3;
+  font-weight: bold;
+}
+
+.btn-book {
+  font-family: $body-font;
+  border: 5px $primary-color solid;
+  padding: 8px 16px;
+  border-radius: 25px;
+  text-align: center;
+  color: $primary-color;
+  font-size: $h3;
+  margin-top: 32px;
+  font-weight: bold;
+}
+
+.btn-book:hover {
+  text-decoration: none;
+  font-size: 28px;
+  transition: all 0.3s ease;
+  color: $primary-hover;
+  border: 5px $primary-hover solid;
 }
