change philosopher show style

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -15,7 +15,7 @@ $primary-hover: hsl(334, 73%, 33%);
 $border-color: hsl(0, 0%, 87%);
 
 // -- Box shadow --
-$box-shadow-color: 0px, 2px, 8px rgba(0,0,0,0.15);
+$box-shadow-color: 0px, 2px, 8px rgba(0 0 0 0.15);
 
 
 
