--- a/app/views/philosophers/new.html.erb
+++ b/app/views/philosophers/new.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="container-flex">
     <div class="form-part">
-      <h1>Create a new philosopher.</h1>
+      <h1 class="title">Create a new philosopher.</h1>
+      <span class="title-underline"></span>
       <p>Add your philosopher and let other people enjoy his widsom.</p>
       <div class="create-form">
         <%= simple_form_for(@philosopher) do |f| %>
@@ -15,7 +16,7 @@
             <%= f.input :price_per_night %>
             <%= f.input :description %>
             <%= f.input :photo, as: :file %>
-            <%= f.submit class: "btn btn-primary" %>
+            <%= f.submit class: "primary-btn" %>
         <% end %>
      </div>
     </div>
