--- a/app/views/philosophers/show.html.erb
+++ b/app/views/philosophers/show.html.erb
@@ -1,27 +1,58 @@
 <div class="container">
-  <div class="show">
-    <div class="content">
-      <h1 class="title"><%= @philosopher.last_name %></h1>
-      <h2 class="title"><%= @philosopher.nationality %> - <%= @philosopher.specialty %></h2>
-      <p><%= @philosopher.description %></p>
-      <p class='price'><%= @philosopher.price_per_night%>€ per night</p>
-      <p>Prestations: </p>
-      <ul>
-        <% @philosopher.prestations.each do |prestation| %>
-          <li class="prestation"> <%= prestation  %> </li>
-          <% end %>
-      </ul>
-      <%= link_to "Party with #{@philosopher.last_name}",'',  class:"btn-book" %>
-    </div>
+  <div class="row">
+    <div class="col-12 col-lg-6">
+      <div class="content">
+        <h1 class="title"><%= @philosopher.last_name %></h1>
 
-    <div class="photo">
+
+        <div class="cont-nationality d-flex align-items-baseline">
+          <p class="body-strong mr-2">Nationality:</p>
+          <p class="body"><%= @philosopher.nationality %></p>
+        </div>
+
+        <div class="cont-specialty d-flex align-items-baseline">
+          <p class="body-strong mr-2">Specialty:</p>
+          <p class="body"><%= @philosopher.specialty %></p>
+        </div>
+
+        <div class="cont-description">
+        <p class="body-strong"><i class="fas fa-quote-left"></i></p>
+          <p class="body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio vitae, nesciunt adipisci culpa debitis eos atque fugiat molestias voluptates deserunt nulla possimus dolore, a fugit?</p>
+          <p class="body-strong text-right"><i class="fas fa-quote-right"></i></p>
+        </div>
+
+        <div class="cont-prestations">
+          <h4 class="title">Prestations </h4>
+            <ul>
+              <% @philosopher.prestations.each do |prestation| %>
+                <li class="prestation"> <%= prestation  %> </li>
+                <% end %>
+            </ul>
+        </div>
+
+        <h3 class='title'><%= @philosopher.price_per_night%>€ per night</h3>
+        <%= link_to "Party with #{@philosopher.last_name}",'',  class:"primary-btn" %>
+    </div>
+    </div>
+    <div class="col-12 col-lg-6">
+      <div class="photo">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Parmenides.jpg/880px-Parmenides.jpg" alt="">
     </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+    
+
+    
     <%# <div class="photo">
       <% if @philosopher.photo.attached? %>
         <%# <%= cl_image_tag @philosopher.photo.key, height: 1200px, width: 758px, crop: fill %>
       <%# <% end %> 
     <%# </div>  %> 
   
-  </div>
-</div>
+
+
