--- a/app/views/philosophers/new.html.erb
+++ b/app/views/philosophers/new.html.erb
@@ -10,7 +10,7 @@
             <%= f.input :last_name %>
             <%= f.input :specialty %>
             <%= f.input :nationality %>
-            <%= f.input :birthday, class: "custom-select" %>
+            <%= f.input :birthday %>
             <%= f.input :prestations, id: "prestations", collection: Philosopher::PRESTATIONS, input_html: { multiple: true}, include_hidden: false, as: :check_boxes %>
             <%= f.input :available_location %>
             <%= f.input :price_per_night %>
