add space atop submit button

--- a/app/views/philosophers/new.html.erb
+++ b/app/views/philosophers/new.html.erb
@@ -3,7 +3,7 @@
     <div class="form-part">
       <h1 class="title">Create a new philosopher.</h1>
       <span class="title-underline"></span>
-      <p>Add your philosopher and let other people enjoy his widsom.</p>
+      <p>Add your philosopher and let others enjoy his wisdom.</p>
       <div class="create-form">
         <%= simple_form_for(@philosopher) do |f| %>
             <%= f.input :first_name %>
