--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -16,5 +16,5 @@
 <div id="map"
     style="width: 100%; height: 600px;"
     data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="<%= MAPBOX_API_KEY=pk.eyJ1IjoiaHVnby1sYXZvcmVsIiwiYSI6ImNrZGE2d3VlNjFheHIyd3NjNWFhbTI3dzUifQ.xLoGGR7CP55grxY2oZNYxA %>">
+    data-mapbox-api-key="MAPBOX_API_KEY=pk.eyJ1IjoiaHVnby1sYXZvcmVsIiwiYSI6ImNrZGE2d3VlNjFheHIyd3NjNWFhbTI3dzUifQ.xLoGGR7CP55grxY2oZNYxA">
 </div>
