--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -14,7 +14,9 @@
 </ul>
 
 <div id="map"
-    style="width: 100%; height: 600px;"
+    style="width: 50%; height: 100vh;"
     data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="MAPBOX_API_KEY=pk.eyJ1IjoiaHVnby1sYXZvcmVsIiwiYSI6ImNrZGE2d3VlNjFheHIyd3NjNWFhbTI3dzUifQ.xLoGGR7CP55grxY2oZNYxA">
+    data-mapbox-api-key= "<%= ENV['MAPBOX_API_KEY'] %>" >
 </div>
+
+
