--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,7 +1,7 @@
 
 
 .content {
-  padding: 32px;
+  padding: 24px;
   
   p {
     margin: 0;
@@ -10,7 +10,7 @@
   h1 {
     color: $high-text-color;
     margin-bottom: 32px;
-    margin-top: 128px;
+    margin-top: 80px;
   }
   
   h2 {
@@ -26,6 +26,13 @@
       box-shadow: $box-shadow-color;
     }
   }
+
+  .fas {
+    color: black;
+    font-size: 24px;
+  }
+
+  
 }
 
 .photo {
@@ -33,24 +40,11 @@
   top: 0;
   img {
     height: 100vh;
+    width: 100%;
   }
 }
 
-ul {
-  padding-left: 0 ;
-  margin-bottom: 0;
-    li {
-    display: inline-block;
-    list-style: none;
-    color: $medium-text-color;
-    margin-right: 8px; 
-    margin-bottom: 8px;
 
-    &:hover {
-      box-shadow: $box-shadow-color;
-    }
-  }
-}
 .cont-nationality {
   margin-bottom: 24px;
 }
@@ -60,12 +54,28 @@ ul {
 }
 
 .cont-prestations {
-  display: flex;
-  flex-wrap: wrap;
   margin-bottom: 24px;
 
     h4 {
     margin-bottom: 12px;
+  }
+
+  ul {
+    padding-left: 0 ;
+    margin-bottom: 0;
+    display: flex;
+    flex-wrap: wrap;
+      li {
+      display: inline-block;
+      list-style: none;
+      color: $medium-text-color;
+      margin-right: 8px; 
+      margin-bottom: 8px;
+  
+      &:hover {
+        box-shadow: $box-shadow-color;
+      }
+    }
   }
 }
 
@@ -110,3 +120,10 @@ ul {
   border: 5px $primary-hover solid;
 }
 
+.booking-form {
+  opacity: 0;
+
+  &.active {
+    opacity: 1;
+  }
+}
