--- a/app/assets/stylesheets/pages/_new-philosopher.scss
+++ b/app/assets/stylesheets/pages/_new-philosopher.scss
@@ -14,6 +14,7 @@
 
 .form-part {
   margin: 0 auto;
+  margin-top: 45px;
   input:not([type="submit"]) {
     background-color: $secondary-background-color;
     border: none;
