--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,13 @@
   </head>
 
   <body>
+    <%= render 'shared/navbar' %>
+
     <p class="notice m-0"><%= notice %></p>
     <p class="alert m-0"><%= alert %></p>
-    
+
     <%= yield %>
-    
+
     <%= render 'shared/footer' %>
   </body>
 </html>
