--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: url(https://images.unsplash.com/photo-1542202793-40a53b954ecd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
   <div class="container">
-    <h1 class="title">Lorem Ipsum</h1>
-    <p class="body-strong">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, dolores voluptatem? Veritatis neque quas.</p>
+    <h1 class="title">Enjoy wisdom</h1>
+    <p class="body-strong">Rent a philosopher and enjoy little wisdom nuggets dropped at your feet.</p>
     <%= link_to 'Rechercher', philosophers_path, class: "primary-btn" %>
   </div>
 </div>
