--- a/app/views/philosophers/new.html.erb
+++ b/app/views/philosophers/new.html.erb
@@ -8,11 +8,11 @@
         <%= simple_form_for(@philosopher) do |f| %>
             <%= f.input :first_name %>
             <%= f.input :last_name %>
-            <%= f.input :specialty %>
+            <%= f.input :specialty, collection: Philosopher::SPECIALTIES %>
             <%= f.input :nationality %>
             <%= f.input :birthday %>
             <%= f.input :prestations, id: "prestations", collection: Philosopher::PRESTATIONS, input_html: { multiple: true}, include_hidden: false, as: :check_boxes %>
-            <%= f.input :available_location %>
+            <%= f.input :address %>
             <%= f.input :price_per_night %>
             <%= f.input :description %>
             <%= f.input :photo, as: :file %>
