--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,7 +5,7 @@
   box-shadow: $box-shadow-color;
   border-radius: 16px;
   margin: 0 auto;
-  
+
   .con-photo {
     width: 100%;
     height: 256px;
@@ -29,4 +29,10 @@
       margin: 0;
     }
   }
+}
+
+.card-philosopher {
+  background-color: red;
+  height: 192px;
+  max-width: 100%;
 }
