--- a/app/views/philosophers/new.html.erb
+++ b/app/views/philosophers/new.html.erb
@@ -12,7 +12,7 @@
             <%= f.input :nationality %>
             <%= f.input :birthday %>
             <%= f.input :prestations, id: "prestations", collection: Philosopher::PRESTATIONS, input_html: { multiple: true}, include_hidden: false, as: :check_boxes %>
-            <%= f.input :available_location %>
+            <%= f.input :address %>
             <%= f.input :price_per_night %>
             <%= f.input :description %>
             <%= f.input :photo, as: :file %>
