--- a/app/assets/stylesheets/pages/_index-philosophers.scss
+++ b/app/assets/stylesheets/pages/_index-philosophers.scss
@@ -7,7 +7,9 @@
 }
 
 .con-cards-index {
-  background-color: red;
-  height: 100px;
   margin: 32px auto;
+  a {
+    text-decoration: none;
+    color: $high-text-color;
+  }
 }
