--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -35,16 +35,6 @@
   
 }
 
-.photo {
-  position: sticky;
-  top: 0;
-  img {
-    height: 100vh;
-    width: 100%;
-  }
-}
-
-
 .cont-nationality {
   margin-bottom: 24px;
 }
@@ -120,10 +110,31 @@
   border: 5px $primary-hover solid;
 }
 
-.booking-form {
-  opacity: 0;
+.cont-photo {
+  position: relative;  
+  position: sticky;
+    top: 0;
 
-  &.active {
-    opacity: 1;
-  }
+    img {
+      height: 100vh;
+      width: 100%;
+    }
+    
+    .booking-form {
+    opacity: 0;
+    position: absolute;
+    top: 300px;
+    background-color: $secondary-background-color;
+    border: 1px $border-color solid;
+    padding: 16px;
+    border-radius: 8px;
+    top: 10%;
+    left: 20%;
+    }
+
+}
+
+.active {
+  opacity: .9 !important;
+  transition: all 0.5s ease;
 }
