--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -63,7 +63,18 @@
   }
 
   ul {
-    margin-bottom: 16px;
+    padding-left: 0 ;
+    margin-bottom: 0;
+    display: flex;
+    flex-wrap: wrap;
+
+    li {
+    display: inline-block;
+    list-style: none;
+    color: $medium-text-color;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    }
   }
 
   h4 {
