--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,5 +1,4 @@
 
-
 .content {
   padding: 24px;
   
@@ -129,7 +128,11 @@
     padding: 16px;
     border-radius: 8px;
     top: 10%;
-    left: 20%;
+    left: 17%;
+    }
+
+    #reservation_address {
+      background-color: white;
     }
 
 }
