--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,29 +12,29 @@
       <div class="con-cards">
         <div class="card-philo">
           <div class="con-photo">
-            <%= image_tag 'https://source.unsplash.com/random/400x600', alt: "category", class: 'img-card-philo' %>
+            <%= image_tag 'https://images.unsplash.com/photo-1593240637899-5fc06c754c2b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1240&q=80', alt: "category", class: 'img-card-philo' %>
           </div>
           <div class="con-text">
-            <h4 class="title">Category</h4>
-            <p class="body-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <h4 class="title">Logic</h4>
+            <p class="body-small">In it simplest construction, logic is the academic study of reasoning.</p>
           </div>
         </div>
         <div class="card-philo">
           <div class="con-photo">
-            <%= image_tag 'https://source.unsplash.com/random/400x600', alt: "category", class: 'img-card-philo' %>
+            <%= image_tag 'https://images.unsplash.com/photo-1528217580778-96e570819666?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1301&q=80', alt: "category", class: 'img-card-philo' %>
           </div>
           <div class="con-text">
-            <h4 class="title">Category</h4>
-            <p class="body-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <h4 class="title">Ethics</h4>
+            <p class="body-small">Ethics broadly defined, is moral philosophy.</p>
           </div>
         </div>
         <div class="card-philo">
           <div class="con-photo">
-            <%= image_tag 'https://source.unsplash.com/random/400x600', alt: "category", class: 'img-card-philo' %>
+            <%= image_tag 'https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80', alt: "category", class: 'img-card-philo' %>
           </div>
           <div class="con-text">
-            <h4 class="title">Category</h4>
-            <p class="body-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <h4 class="title">Epistemology</h4>
+            <p class="body-small">Epistemology is also known as theory of knowledge. </p>
           </div>
         </div>
       </div>
