--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 .primary-btn {
   display: inline-block;
-  padding: 16px;
+  padding: 16px 24px;
   background-color: $primary-color;
   text-decoration: none;
   color: $main-background-color;
