--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,14 +1,27 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: $main-background-color;
+  height: 80px;
+
+  a {
+    color: $high-text-color;
+    text-decoration: none;
+
+    h4 {
+      margin: 0;
+      color: $primary-color;
+    }
+  }
+
+  .primary-btn {
+    padding: 8px 16px;
+    color: $main-background-color;
+    font-weight: $regular;
+  }
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
 }
 
 .b-bottom {
