--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon b-bottom">
-  <%= link_to "BeSmart", root_path, class: "navbar-brand" %>
+  <%= link_to root_path, id: "brand" do %>
+    <h4 class="title">BeSmart</h4>
+  <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,12 +9,12 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto d-flex align-items-baseline">
       <li class="nav-item active">
-        <%= link_to "Add a philosopher", new_philosopher_path, class: "nav-link" %>
+        <%= link_to "New philosopher", new_philosopher_path, class: "primary-btn" %>
       </li>
       <% if user_signed_in? %>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown ml-4">
           <% if current_user.avatar.attached? %>
             <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end %>
