--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
             <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "See my philosophers", "#", class: "dropdown-item" %>
+          <%= link_to "See my philosophers", dashboard_philosophers_path, class: "dropdown-item" %>
           <%= link_to "Orders", "#", class: "dropdown-item" %>
           <%= link_to "Sign off", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
