--- a/app/views/philosophers/show.html.erb
+++ b/app/views/philosophers/show.html.erb
@@ -65,8 +65,8 @@
 
               <div class="create-form">
                 <%= simple_form_for [ @philosopher, @reservation ] do |f| %>
-                  <%= f.input :start_date %>
-                  <%= f.input :end_date %>
+                  <%= f.input :start_date, as: :string, required: false, input_html: { id: "range_start" } %>
+                  <%= f.input :end_date, as: :string, required: false, input_html: { id: "range_end" } %>
                   <%= f.input :address %>
                   <%= f.submit class: "primary-btn" %>
                 <% end %>
