--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -81,14 +81,15 @@
 .card-philosopher-footer {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: baseline;
   margin-top: 16px;
   h4 {
     margin: 0;
     text-align: right;
   }
 
-  h5 {
+  p {
     color: $medium-text-color;
+    margin: 0;
   }
 }
