--- a/app/views/philosophers/show.html.erb
+++ b/app/views/philosophers/show.html.erb
@@ -53,7 +53,7 @@
           <% end %>
         </div>
 
-        <div class="booking-form" id="book-form">
+        <div class="booking-form active" id="book-form">
           <div class="container-flex">
             <div class="form-part">
 
@@ -65,8 +65,8 @@
 
               <div class="create-form">
                 <%= simple_form_for [ @philosopher, @reservation ] do |f| %>
-                  <%= f.input :start_date, as: :string, required: false, input_html: { id: "range_start" } %>
-                  <%= f.input :end_date, as: :string, required: false, input_html: { id: "range_end" } %>
+                  <%= f.input :start_date, as: :string, required: false, input_html: { id: "range_start" }, placeholder: "Start" %>
+                  <%= f.input :end_date, as: :string, required: false, input_html: { id: "range_end" }, placeholder: "End" %>
                   <%= f.input :address %>
                   <%= f.submit class: "primary-btn" %>
                 <% end %>
@@ -78,9 +78,3 @@
     </div>
   </div>
 </div>
-
-       <%# <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Parmenides.jpg/880px-Parmenides.jpg" alt="">  %>
-
-  
-
-
