--- a/app/assets/stylesheets/pages/_new-philosopher.scss
+++ b/app/assets/stylesheets/pages/_new-philosopher.scss
@@ -1,43 +1,58 @@
-.container-flex {
-  display: flex;
-  margin-bottom: 50px;
-}
+.con-form {
+  padding: 32px;
+  margin-top: 32px;
+  margin-bottom: 32px;
+  background-color: $secondary-background-color;
+  border-radius: 24px;
+  box-shadow: $box-shadow-color;
 
-.title-underline {
-  margin-bottom: 21px;
-}
+  h1 {
+    margin: 0;
+  }
 
-.form-part p {
-  color: $medium-text-color;
-  margin-bottom: 35px;
-}
-
-.form-part {
-  margin: 0 auto;
-  margin-top: 45px;
-  input:not([type="submit"]) {
-    background-color: $secondary-background-color;
-    border: none;
-    border-radius: 8px;
-  }
-  textarea {
-    background-color: $secondary-background-color;
-    border: none;
-    border-radius: 8px;
-  }
-  input[type="file"] {
-    background-color: $main-background-color;
-  }
-  input[type="submit"] {
-    border: none;
-    margin-top: 20px;
+  p {
+    margin-top: 24px;
+    margin-bottom: 32px;
   }
 }
 
-.space-top {
-  margin-top: 10px;
-}
 
-fieldset, .form-group {
-  margin-top: 25px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .form-part {
+//   margin: 0 auto;
+//   margin-top: 45px;
+//   input:not([type="submit"]) {
+//     background-color: $secondary-background-color;
+//     border: none;
+//     border-radius: 8px;
+//   }
+//   textarea {
+//     background-color: $secondary-background-color;
+//     border: none;
+//     border-radius: 8px;
+//   }
+//   input[type="file"] {
+//     background-color: $main-background-color;
+//   }
+//   input[type="submit"] {
+//     border: none;
+//     margin-top: 20px;
+//   }
+// }
+
+// fieldset, .form-group {
+//   margin-top: 25px;
+// }
