Add picture on the popup

--- a/app/views/philosophers/_info_window.html.erb
+++ b/app/views/philosophers/_info_window.html.erb
@@ -4,6 +4,7 @@
   <% end %>
 </div>
 <div class="popup-content">
-  <h5 class="title"><%= philosopher.last_name %></h5>
-  <p class="title"><%= philosopher.address %></p>
+  <p class="title"><%= philosopher.last_name %></p>
+  <p-small class="title"><%= philosopher.address %></p-small>
+  <p class="title popup-price"><span class="bold"><%= philosopher.price_per_night %></span>€/night</p>
 </div>
