--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -11,6 +11,7 @@
   border-radius: 16px;
   p {
     color: $high-text-color;
+    margin: 0;
   }
   text-align: center;
   font-family: 'Open Sans', sans-serif;
@@ -19,5 +20,13 @@
 .popup-photo {
   img {
     border-radius: 16px 16px 0 0;
+  }
+}
+
+.popup-content {
+  padding: 8px;
+  text-align: left;
+  .popup-price .bold {
+      font-weight: bold;
   }
 }
