--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,25 @@
     <h1 class="title">Enjoy wisdom</h1>
     <p class="body-strong">Rent a philosopher and enjoy little wisdom nuggets dropped at your feet.</p>
     <%= link_to 'Rechercher', philosophers_path, class: "primary-btn" %>
+    <%= form_tag philosophers_path, method: :get do %>
+    <div class="form-group-home">
+        <div class="location-field">
+          <%= text_field_tag :location,
+            params[:location],
+            class: "form-control",
+            placeholder: "Where?"
+          %>
+        </div>
+        <div class="specialty-field">
+          <%= text_field_tag :specialty,
+            params[:specialty],
+            class: "form-control",
+            placeholder: "What specialty?"
+          %>
+        </div>
+      <%= submit_tag "Search", class: "btn btn-primary" %>
+    </div>
+    <% end %>
   </div>
 </div>
 
