Remove top marging title h1, adjustment on cards and color for markers

--- a/app/views/philosophers/_info_window.html.erb
+++ b/app/views/philosophers/_info_window.html.erb
@@ -4,7 +4,6 @@
   <% end %>
 </div>
 <div class="popup-content">
-  <p class="title"><%= philosopher.last_name %></p>
-  <p-small class="title"><%= philosopher.address %></p-small>
-  <p class="title popup-price"><span class="bold"><%= philosopher.price_per_night %></span>€/night</p>
+  <p class="body"><%= philosopher.last_name %></p>
+  <p class="body-strong"><%= philosopher.price_per_night %>€/night</p>
 </div>
