--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -14,6 +14,7 @@
 .mapboxgl-popup-content {
   padding: 0;
   border-radius: 16px;
+  box-shadow: $box-shadow-color;
   p {
     color: $high-text-color;
     margin: 0;
@@ -33,7 +34,4 @@
 .popup-content {
   padding: 8px;
   text-align: left;
-  .popup-price .bold {
-      font-weight: bold;
-  }
 }
