--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -29,7 +29,7 @@
                       <% end %>
                     </ul>
                     <div class="card-philosopher-footer">
-                      <p class="title"><%= philosopher.nationality %> · <%= philosopher.specialty %></p>
+                      <p class="body"><%= philosopher.nationality %> · <%= philosopher.specialty %></p>
                       <h4 class="title">$<%= philosopher.price_per_night %>/night</h4>
                     </div>
                   </div>
