--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,6 @@
   <div class="container">
     <h1 class="title">Enjoy wisdom</h1>
     <p class="body-strong">Rent a philosopher and enjoy little wisdom nuggets dropped at your feet.</p>
-    <%= link_to 'Rechercher', philosophers_path, class: "primary-btn" %>
     <%= form_tag philosophers_path, method: :get do %>
     <div class="form-group-home">
         <div class="location-field">
@@ -13,13 +12,9 @@
           %>
         </div>
         <div class="specialty-field">
-          <%= text_field_tag :specialty,
-            params[:specialty],
-            class: "form-control",
-            placeholder: "What specialty?"
-          %>
+          <%= select_tag "specialty", options_for_select(Philosopher::SPECIALTIES, params[:specialty]), class: "form-control", prompt: 'Specialty' %>
         </div>
-      <%= submit_tag "Search", class: "btn btn-primary" %>
+      <%= submit_tag "Search", class: "primary-btn", id: "search-btn-home" %>
     </div>
     <% end %>
   </div>
