Change $ to € on the cards

--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -30,7 +30,7 @@
                     </ul>
                     <div class="card-philosopher-footer">
                       <p class="body"><%= philosopher.nationality %> · <%= philosopher.specialty %></p>
-                      <h4 class="title">$<%= philosopher.price_per_night %>/night</h4>
+                      <h4 class="title"><%= philosopher.price_per_night %>€/night</h4>
                     </div>
                   </div>
                 </div>
